# market-memory

./: .env.example  .gitignore  AGENTS.md  README.md  ingest.py  ingest_blockscout.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  wrangler.toml
.github/workflows/: deploy.yml
data/: sample_events.csv  sample_events.json  sync_state.json  watchlist.example.txt  watchlist.example.yaml
examples/: bot_integration.py  whale_alert_bridge.py
functions/: [[path]].ts
market_memory/: __init__.py  app.py  backfill.py  cli.py  collect.py  config.py  context.py  db.py  detectors.py  indicators.py  ingest.py  models.py  sources.py  sync.py
market_memory/api/: __init__.py  routes.py
market_memory/blockscout/: __init__.py  __main__.py  analysis.py  cli.py  client.py  config.py  db.py  pipeline.py
market_memory/etherscan/: __init__.py  __main__.py  alerts.py  analysis.py  chains.py  cli.py  client.py  config.py  dashboard.py  db.py  pipeline.py  scheduler.py  watchlist.py
migrations/: 0001_init.sql
prompts/: code-audit.md  initial-prompt
public/: index.html
public/css/: style.css
scripts/: deploy.sh  run-sync.sh  seed-remote.sh
src/: context.ts  index.ts  query.ts  storage.ts  types.ts
tests/: conftest.py  test_api.py  test_backfill_fixes.py  test_blockscout.py  test_db_fixes.py  test_detectors.py  test_etherscan.py  test_indicators.py  test_ingest.py  test_queries.py  test_sources.py  test_sources_fixes.py  test_sync_fixes.py
tests/fixtures/: sample_events.json
