[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-memory"
version = "0.1.0"
description = "Local event store for tweet-ready market historical context"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]

[tool.setuptools.packages.find]
include = ["market_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]